# unetvit4sclera

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: onboarding_template.md
configs/models/: config_train_unet_with_mobious.yaml
data/: README.md
data/aerial-imagery/: README.md
data/licence-agreements/: MOBIUS-data-licence-agreement.docx  README.md  SBVPI-licence-agreement.docx
data/mobious/: README.md
data/mobious/sample-frames/: README.md
data/sbvpi/: README.md
data/sbvpi/samples/: README.md
docs/: README.md
scripts/: activate_pre_commit.bash
scripts/models/: train_unet_with_mobious.bash  train_unetvit_with_segdataset.bash
scripts/tests/: unit_test_ml_pipeline.bash  unit_test_unet_pipeline.bash  unit_test_unetvit_pipeline.bash
src/unetvit/: __init__.py
src/unetvit/apis/: inference.py  train.py
src/unetvit/models/: unetvit.py
src/unetvit/utils/: datasets.py  helpers.py  pytorch2onnx.py
src/unetvit4sclera/apis/: train.py  train_unet_with_mobious.py  train_unetvit_with_segdata.py
src/unetvit4sclera/models/: unet.py  unetvit.py
src/unetvit4sclera/utils/: datasets.py  metrics.py  pytorch2onnx.py  utils.py
tests/: .pylintrc  README.md  conftest.py  ml_pipeline.py  test_inference.py  test_unet_pipeline.py  test_unetvit_pipeline.py
